syntax = "proto3";

package v1.nfpb;

import "v1/nfpb/msg_language.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/nfpb;nfpbv1";

message GetAllLanguagesRequest {
  int32 pageNumber = 1;
  int32 pageSize   = 2;
}

message GetAllLanguagesResponse {
  repeated LanguageResponse languages = 1;
}